--- a/test_module_2.ipynb
+++ b/test_module_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5babf0df",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "50172442",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "d14e63ed",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "4da34ce7",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "5b79e1e2",
    "metadata": {},
    "outputs": [],
@@ -501,27 +501,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "e3526afb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ผู้ให้บริการชำระเงินทางอิเล็กทรอนิกส์ที่มิใช่ สง.',\n",
-       " 'บริษัทบริหารสินทรัพย์',\n",
-       " 'บริษัทผู้ประกอบธุรกิจสินเชื่อรายย่อยเพื่อการประกอบอาชีพภายใต้การกำกับ',\n",
+       "['สถาบันการเงินเฉพาะกิจ',\n",
+       " 'ผู้ให้บริการชำระเงินทางอิเล็กทรอนิกส์ที่มิใช่ สง.',\n",
        " 'ธนาคารพาณิชย์จดทะเบียนในประเทศ',\n",
-       " 'อื่น ๆ',\n",
-       " 'สถาบันการเงินเฉพาะกิจ',\n",
        " 'บริษัทเงินทุน',\n",
-       " 'ธนาคารพาณิชย์ที่จดทะเบียนในต่างประเทศ',\n",
-       " 'บริษัทเครดิตฟองซิเอร์',\n",
        " 'ผู้ประกอบธุรกิจบัตรเครดิต',\n",
-       " 'บ.ที่ประกอบธุรกิจสินเชื่อส่วนบุคคลภายใต้การกำกับ']"
+       " 'อื่น ๆ',\n",
+       " 'บริษัทเครดิตฟองซิเอร์',\n",
+       " 'บริษัทบริหารสินทรัพย์',\n",
+       " 'บ.ที่ประกอบธุรกิจสินเชื่อส่วนบุคคลภายใต้การกำกับ',\n",
+       " 'ธนาคารพาณิชย์ที่จดทะเบียนในต่างประเทศ',\n",
+       " 'บริษัทผู้ประกอบธุรกิจสินเชื่อรายย่อยเพื่อการประกอบอาชีพภายใต้การกำกับ']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,27 +532,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "d5d61468",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ผู้ให้บริการชำระเงินทางอิเล็กทรอนิกส์ที่มิใช่ สง.',\n",
-       " 'บริษัทบริหารสินทรัพย์',\n",
-       " 'บริษัทผู้ประกอบธุรกิจสินเชื่อรายย่อยเพื่อการประกอบอาชีพภายใต้การกำกับ',\n",
+       "['สถาบันการเงินเฉพาะกิจ',\n",
+       " 'ผู้ให้บริการชำระเงินทางอิเล็กทรอนิกส์ที่มิใช่ สง.',\n",
        " 'ธนาคารพาณิชย์จดทะเบียนในประเทศ',\n",
-       " 'อื่น ๆ',\n",
-       " 'สถาบันการเงินเฉพาะกิจ',\n",
        " 'บริษัทเงินทุน',\n",
-       " 'ธนาคารพาณิชย์ที่จดทะเบียนในต่างประเทศ',\n",
-       " 'บริษัทเครดิตฟองซิเอร์',\n",
        " 'ผู้ประกอบธุรกิจบัตรเครดิต',\n",
-       " 'บ.ที่ประกอบธุรกิจสินเชื่อส่วนบุคคลภายใต้การกำกับ']"
+       " 'อื่น ๆ',\n",
+       " 'บริษัทเครดิตฟองซิเอร์',\n",
+       " 'บริษัทบริหารสินทรัพย์',\n",
+       " 'บ.ที่ประกอบธุรกิจสินเชื่อส่วนบุคคลภายใต้การกำกับ',\n",
+       " 'ธนาคารพาณิชย์ที่จดทะเบียนในต่างประเทศ',\n",
+       " 'บริษัทผู้ประกอบธุรกิจสินเชื่อรายย่อยเพื่อการประกอบอาชีพภายใต้การกำกับ']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,17 +579,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "22d915ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['อื่น ๆ', 'ประกาศ ธปท.', 'หนังสือเวียน']"
+       "['หนังสือเวียน', 'อื่น ๆ', 'ประกาศ ธปท.']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,21 +600,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "fe60996d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['พรบ.สง. มาตรา  31',\n",
-       " 'พรบ.สง. มาตรา  57',\n",
-       " 'พรบ.สง. มาตรา  60',\n",
-       " 'พรบ.สง. มาตรา  34',\n",
-       " 'พรบ.สง. มาตรา  66']"
+       "['พรบ.สง. มาตรา  30',\n",
+       " 'พรบ.สง. มาตรา  80',\n",
+       " 'พรบ.สง. มาตรา  13',\n",
+       " 'พรบ.สง. มาตรา  44',\n",
+       " 'พรบ.สง. มาตรา  57']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "1b9d736c",
    "metadata": {},
    "outputs": [],
@@ -635,226 +635,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "09529aa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_df = app.filter_result_search(Result_search)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1934ed80",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Doc_Page_ID</th>\n",
-       "      <th>Original_text</th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Doc_ID</th>\n",
-       "      <th>Page_ID</th>\n",
-       "      <th>เรื่อง</th>\n",
-       "      <th>File_Code</th>\n",
-       "      <th>Category_Code</th>\n",
-       "      <th>หัวเรื่อง</th>\n",
-       "      <th>ประเภทเอกสาร</th>\n",
-       "      <th>วันที่สิ้นสุด</th>\n",
-       "      <th>สถานะ</th>\n",
-       "      <th>สถาบันผู้เกี่ยวข้อง</th>\n",
-       "      <th>กฎหมาย</th>\n",
-       "      <th>เรื่อง.1</th>\n",
-       "      <th>Number_result</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>0059|0006</td>\n",
-       "      <td>คำถาม\\n3 กรณีลูกหนี้กู้สินเชื่อเพื่อที่อยู่อาศ...</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>0059</td>\n",
-       "      <td>0006</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>25640186.pdf</td>\n",
-       "      <td>2</td>\n",
-       "      <td>['สถาบันการเงิน']</td>\n",
-       "      <td>['หนังสือเวียน']</td>\n",
-       "      <td>['1900-01-01 00:00:00']</td>\n",
-       "      <td>['ใช้อยู่']</td>\n",
-       "      <td>['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>0059|0004</td>\n",
-       "      <td>ตารางสรุปหลักเกณฑ์การกำกับดูแลสินเชื่อเพื่อที่...</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>0059</td>\n",
-       "      <td>0004</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>25640186.pdf</td>\n",
-       "      <td>2</td>\n",
-       "      <td>['สถาบันการเงิน']</td>\n",
-       "      <td>['หนังสือเวียน']</td>\n",
-       "      <td>['1900-01-01 00:00:00']</td>\n",
-       "      <td>['ใช้อยู่']</td>\n",
-       "      <td>['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>351</th>\n",
-       "      <td>0059|0007</td>\n",
-       "      <td>4\\n5 ในการคำนวณสินทรัพย์เสี่ยงด้านเครดิตที่\\nน...</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0059</td>\n",
-       "      <td>0007</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>25640186.pdf</td>\n",
-       "      <td>2</td>\n",
-       "      <td>['สถาบันการเงิน']</td>\n",
-       "      <td>['หนังสือเวียน']</td>\n",
-       "      <td>['1900-01-01 00:00:00']</td>\n",
-       "      <td>['ใช้อยู่']</td>\n",
-       "      <td>['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>471</th>\n",
-       "      <td>0059|0002</td>\n",
-       "      <td>2. แนวทางการผ่อนปรนมาตรการ LTV\\nให้สถาบันการเง...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0059</td>\n",
-       "      <td>0002</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>25640186.pdf</td>\n",
-       "      <td>2</td>\n",
-       "      <td>['สถาบันการเงิน']</td>\n",
-       "      <td>['หนังสือเวียน']</td>\n",
-       "      <td>['1900-01-01 00:00:00']</td>\n",
-       "      <td>['ใช้อยู่']</td>\n",
-       "      <td>['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>538</th>\n",
-       "      <td>0059|0001</td>\n",
-       "      <td>เรียน ผู้จัดการ\\nสถาบันการเงินตามกฎหมายว่าด้วย...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0059</td>\n",
-       "      <td>0001</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>25640186.pdf</td>\n",
-       "      <td>2</td>\n",
-       "      <td>['สถาบันการเงิน']</td>\n",
-       "      <td>['หนังสือเวียน']</td>\n",
-       "      <td>['1900-01-01 00:00:00']</td>\n",
-       "      <td>['ใช้อยู่']</td>\n",
-       "      <td>['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>539</th>\n",
-       "      <td>0060|0001</td>\n",
-       "      <td>เรียน ผู้จัดการ\\nสถาบันการเงินตามกฎหมายว่าด้วย...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0060</td>\n",
-       "      <td>0001</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>25640203.pdf</td>\n",
-       "      <td>2</td>\n",
-       "      <td>['สถาบันการเงิน']</td>\n",
-       "      <td>['หนังสือเวียน']</td>\n",
-       "      <td>['1900-01-01 00:00:00']</td>\n",
-       "      <td>['ใช้อยู่']</td>\n",
-       "      <td>['บ.ที่ประกอบธุรกิจสินเชื่อส่วนบุคคลภายใต้การก...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>เรื่อง</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    Doc_Page_ID                                      Original_text  Score  \\\n",
-       "99    0059|0006  คำถาม\\n3 กรณีลูกหนี้กู้สินเชื่อเพื่อที่อยู่อาศ...   18.0   \n",
-       "177   0059|0004  ตารางสรุปหลักเกณฑ์การกำกับดูแลสินเชื่อเพื่อที่...   12.0   \n",
-       "351   0059|0007  4\\n5 ในการคำนวณสินทรัพย์เสี่ยงด้านเครดิตที่\\nน...    6.0   \n",
-       "471   0059|0002  2. แนวทางการผ่อนปรนมาตรการ LTV\\nให้สถาบันการเง...    4.0   \n",
-       "538   0059|0001  เรียน ผู้จัดการ\\nสถาบันการเงินตามกฎหมายว่าด้วย...    2.0   \n",
-       "539   0060|0001  เรียน ผู้จัดการ\\nสถาบันการเงินตามกฎหมายว่าด้วย...    2.0   \n",
-       "\n",
-       "    Doc_ID Page_ID  เรื่อง     File_Code Category_Code          หัวเรื่อง  \\\n",
-       "99    0059    0006  เรื่อง  25640186.pdf             2  ['สถาบันการเงิน']   \n",
-       "177   0059    0004  เรื่อง  25640186.pdf             2  ['สถาบันการเงิน']   \n",
-       "351   0059    0007  เรื่อง  25640186.pdf             2  ['สถาบันการเงิน']   \n",
-       "471   0059    0002  เรื่อง  25640186.pdf             2  ['สถาบันการเงิน']   \n",
-       "538   0059    0001  เรื่อง  25640186.pdf             2  ['สถาบันการเงิน']   \n",
-       "539   0060    0001  เรื่อง  25640203.pdf             2  ['สถาบันการเงิน']   \n",
-       "\n",
-       "         ประเภทเอกสาร            วันที่สิ้นสุด        สถานะ  \\\n",
-       "99   ['หนังสือเวียน']  ['1900-01-01 00:00:00']  ['ใช้อยู่']   \n",
-       "177  ['หนังสือเวียน']  ['1900-01-01 00:00:00']  ['ใช้อยู่']   \n",
-       "351  ['หนังสือเวียน']  ['1900-01-01 00:00:00']  ['ใช้อยู่']   \n",
-       "471  ['หนังสือเวียน']  ['1900-01-01 00:00:00']  ['ใช้อยู่']   \n",
-       "538  ['หนังสือเวียน']  ['1900-01-01 00:00:00']  ['ใช้อยู่']   \n",
-       "539  ['หนังสือเวียน']  ['1900-01-01 00:00:00']  ['ใช้อยู่']   \n",
-       "\n",
-       "                                   สถาบันผู้เกี่ยวข้อง กฎหมาย เรื่อง.1  \\\n",
-       "99   ['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...     []   เรื่อง   \n",
-       "177  ['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...     []   เรื่อง   \n",
-       "351  ['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...     []   เรื่อง   \n",
-       "471  ['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...     []   เรื่อง   \n",
-       "538  ['บริษัทเงินทุน', 'ธนาคารพาณิชย์จดทะเบียนในประ...     []   เรื่อง   \n",
-       "539  ['บ.ที่ประกอบธุรกิจสินเชื่อส่วนบุคคลภายใต้การก...     []   เรื่อง   \n",
-       "\n",
-       "     Number_result  \n",
-       "99             NaN  \n",
-       "177            NaN  \n",
-       "351            NaN  \n",
-       "471            NaN  \n",
-       "538            NaN  \n",
-       "539            1.0  "
+       "\"['บริษัทเครดิตฟองซิเอร์', 'ธนาคารพาณิชย์ที่จดทะเบียนในต่างประเทศ', 'ธนาคารพาณิชย์จดทะเบียนในประเทศ', 'บริษัทเงินทุน', 'สถาบันการเงินเฉพาะกิจ']\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "app.filter_result_search(Result_search)"
+    "res_df['สถาบันผู้เกี่ยวข้อง'].values[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1934ed80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
